<resources>
    <string name="app_name">BigBasketSalesApp</string>
    <string name="google_map_api_key">AIzaSyD6dYxu1qeyLFAQJ9aqaQQTs5rifQkraz0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_lbl">Welcome</string>
    <string name="products_lbl">Products</string>
    <string name="products_list_lbl">Products List</string>
    <string name="stats_lbl">Stats</string>
    <string name="statics_lbl">statics</string>
    <string name="offers_lbl">Offers</string>
    <string name="offers_list_lbl">offers List</string>
    <string name="customer_search_lbl">Customer Search</string>
    <string name="forgot_password_lbl">Forgot Password?</string>
    <string name="password_lbl">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_lbl">Confirm</string>
    <string name="change_password_lbl">Change Password</string>
    <string name="forgot_password_instructions">Enter the email address or mobile number associated with your account.</string>
    <string name="send_otp_lbl">Send OTP</string>
    <string name="confirm_password_lbl">Confirm Password</string>
    <string name="resend_code_lbl">Resend Code?</string>
    <string name="verification_instructions">Enter the verification code we just sent you on your email address.</string>
    <string name="profile_lbl">Profile</string>
    <string name="current_password_lbl">Current Password</string>
    <string name="new_password_lbl">New Password</string>
    <string name="target_vs_sales_lbl">Target Vs Sales</string>
    <string name="offer_list_lbl">Offer List</string>
    <string name="edit_profile_lbl">Edit Profile</string>
    <string name="save_lbl">Save</string>
    <string name="revenue_lbl">Revenue</string>
    <string name="product_list_lbl">Product List</string>
    <string name="customer_list_lbl">Customer List</string>
    <string name="follow_up_list_lbl">Follow Up List</string>
    <string name="add_lbl">Add</string>
    <string name="add_follow_up_lbl">Add Follow Up</string>
    <string name="remarks_lbl">Remarks</string>
    <string name="submit_lbl">Submit</string>
    <string name="apply_lbl">Apply</string>
    <string name="statistics_lbl">Statistics</string>
    <string name="onboarding_rate_lbl">Onboarding Rate</string>
    <string name="add_customer_lbl">Add Customer</string>
    <string name="upload_store_board_lbl">Upload Store Board</string>
    <string name="upload_cr_lbl">Upload Cr</string>
    <string name="upload_vat_lbl">Upload Vat</string>
    <string name="upload_menu_lbl">Upload Menu</string>
    <string name="address_lbl">Address</string>
    <string name="edit_customer_lbl">Edit Customer</string>
    <string name="business_details_lbl">Business Details</string>
    <string name="basic_details_lbl">Basic Details</string>
    <string name="individual_lbl">Individual</string>
    <string name="chain_lbl">Chain</string>
    <string name="needs_amp_competitors_lbl"><![CDATA[Needs & Competitors]]></string>
    <string name="competitors_domain_lbl"><![CDATA[Competitors & Domain]]></string>
    <string name="confirm_location_lbl">Confirm Location</string>
    <string name="something_went_wrong">Something Went Wrong...</string>
    <string name="version_live">v 1.0.1</string>
</resources>