<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.fragments.manageCustomers.EditCustomerFragment">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_8sdp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appBarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/edit_customer_lbl"
        android:textColor="@color/blue"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@id/backArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/backArrow"
        />

    <TextView
        android:id="@+id/basicDetailsTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/basic_details_lbl"
        android:textColor="@color/blue"
        android:textSize="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toStartOf="@+id/businessDetailsTab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarTitle" />
    <TextView
        android:id="@+id/businessDetailsTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/business_details_lbl"
        android:textColor="@color/black_200"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/basicDetailsTab"
        app:layout_constraintBottom_toBottomOf="@id/basicDetailsTab"
        app:layout_constraintTop_toTopOf="@id/basicDetailsTab"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/businessDetailsTab"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>